// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18nDirective doesn't render html in result message with text-only values 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {one} onclick=alert(1) {two} message"
  i18n-id="id"
  i18n-values="{ one: '<span', two: '>Press</span>' }"
>
  Default &lt;span onclick=alert(1) &gt;Press&lt;/span&gt; message
</div>
`;

exports[`i18nDirective doesn't render html in text-only value 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {value}"
  i18n-id="id"
  i18n-values="{ value: '<strong>message</strong>' }"
>
  Default &lt;strong&gt;message&lt;/strong&gt;
</div>
`;

exports[`i18nDirective inserts correct translation html content with values 1`] = `"default-message word"`;

exports[`i18nDirective inserts correct translation html content with values 2`] = `"default-message anotherWord"`;

exports[`i18nDirective sanitizes message before inserting it to DOM 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default message, {value}"
  i18n-id="id"
  i18n-values="{ html_value: '<div ng-click=\\"dangerousAction()\\"></div>' }"
>
  Default message, 
  <div />
</div>
`;

exports[`i18nDirective sanitizes onclick attribute 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {value} message"
  i18n-id="id"
  i18n-values="{ html_value: '<span onclick=alert(1)>Press</span>' }"
>
  Default 
  <span>
    Press
  </span>
   message
</div>
`;

exports[`i18nDirective sanitizes onmouseover attribute 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {value} message"
  i18n-id="id"
  i18n-values="{ html_value: '<span onmouseover=\\"alert(1)\\">Press</span>' }"
>
  Default 
  <span>
    Press
  </span>
   message
</div>
`;
